--- a/styles.css
+++ b/styles.css
@@ -1,101 +1,84 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f4f4f9;
-    color: #333;
     margin: 0;
-    padding: 20px;
+    padding: 0;
+    text-align: center;
+    background-color: #f9f9f9;
 }
 
 h1, h2, h3 {
+    margin: 20px 0;
     color: goldenrod;
-    margin-bottom: 20px;
 }
 
-p{
-    color:#45a049;
+p {
+    color: green;
 }
 
-form {
-    margin-bottom: 20px;
+#drag-drop-area {
+    border: 2px dashed #007bff;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 600px;
+    border-radius: 10px;
+    background-color: #e6f7ff;
+    color: #007bff;
+}
+
+#file-message {
+    margin: 0;
+    font-size: 16px;
 }
 
 button {
-    background-color: gold;
-    color: black;
+    margin: 5px;
     padding: 10px 15px;
     border: none;
     border-radius: 5px;
+    background-color: goldenrod;
+    color: white;
     cursor: pointer;
-    font-size: 16px;
 }
 
 button:hover {
     background-color: silver;
 }
 
-#drag-drop-area {
-    border: 2px dashed #ccc;
-    padding: 20px;
+#progress-container {
     margin: 20px auto;
-    width: 50%;
     text-align: center;
-    background-color: #f9f9f9;
-    transition: background-color 0.3s;
 }
 
-#drag-drop-area.drag-over {
-    background-color: #e0ffe0;
-    border-color: #45a049;
-}
-
-#drag-drop-area p {
-    color: #333;
-    font-size: 16px;
-}
-
-#file-input-trigger {
-    color: #45a049;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-
-#results {
+.graficos-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
     margin-top: 20px;
 }
 
-#results img {
-    max-width: 80%;
+.grafico-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    background: white;
+    border: 1px solid #ddd;
+    padding: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.grafico-box img {
+    width: 100%;
+    max-width: 600px;  /* Aumenta el tamaño de las imágenes */
     height: auto;
     margin: 10px 0;
 }
 
-a {
-    display: block;
-    margin-top: 20px;
-    font-size: 16px;
-}
-
-/* Estilos para colocar los gráficos lado a lado */
-.grafico-container {
+.control-menu {
     display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.grafico-box {
-    border: 2px solid #333;
-    padding: 10px;
-    width: 45%;
-    text-align: center;
-}
-
-.grafico-box img {
-    max-width: 100%;
-    height: auto;
-}
-
-.grafico-box h3 {
-    margin-bottom: 10px;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 10px;
 }
