--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,11 @@ button:hover {
     text-align: center;
 }
 
+#error-message {
+    color: red;
+    margin-top: 10px;
+}
+
 .graficos-container {
     display: flex;
     justify-content: space-between; /* Asegura el espacio entre imágenes */
@@ -85,4 +90,33 @@ button:hover {
     justify-content: center;
     gap: 5px;
     margin-top: 10px;
+}
+
+.image-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 400px;
+    border: 1px solid #ccc;
+    margin-top: 10px;
+}
+
+.image-container img {
+    transition: transform 0.2s ease;
+    transform-origin: center;
+    cursor: grab;
+}
+
+.zoom-button {
+    margin: 5px;
+    padding: 5px 10px;
+    border: none;
+    background-color: goldenrod;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.zoom-button:hover {
+    background-color: silver;
 }
